<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirsoftArmory</string>
    <string name="menu_settings">Settings</string>
    <string name="search_button">Search Database</string>
    <string name="myarmory_button">My Armory</string>
    <string name="brand_button">Brand</string>
    <string name="type_button">Type</string>
    <string name="propulsion_button">Propulsion</string>
    <string name="fps_button">FPS</string>
    <string name="aandk_button">A and K</string>
    <string name="aps_button">APS</string>
    <string name="ares_button">ARES</string>
    <string name="cyma_button">CYMA</string>
    <string name="classicarmy_button">Classic Army</string>
    <string name="dboys_button">D-Boys</string>
    <string name="echo1_button">Echo 1</string>
    <string name="gandg_button">G and G</string>
    <string name="gandp_button">G and P</string>
    <string name="ics_button">ICS</string>
    <string name="javelin_button">Javelin</string>
    <string name="jg_button">JG</string>
    <string name="kwa_button">KWA</string>
    <string name="kingarms_button">King Arms</string>
    <string name="lct_button">LCT</string>
    <string name="lancertactical_button">Lancer Tactical</string>
    <string name="src_button">SRC</string>
    <string name="socomgear_button">Socom Gear</string>
    <string name="tsd_button">TSD</string>
    <string name="tokyomarui_button">Tokyo Marui</string>
    <string name="vfcgb_button">VFC/GB</string>
    <string name="we_button">WE</string>
    <string name="rifle_button">Rifle</string>
    <string name="support_button">Support</string>
    <string name="sniper_button">Sniper</string>
    <string name="smg_button">SMG</string>
    <string name="pistol_button">Pistol</string>
    <string name="special_button">Special</string>
    <string name="gas_button">Gas</string>
    <string name="electric_button">Electric</string>
    <string name="spring_button">Spring</string>
    <string name="onefps_button">Less than 200</string>
    <string name="twofps_button">200 to 250</string>
    <string name="threefps_button">250 to 300</string>
    <string name="fourfps_button">300 to 350</string>
    <string name="fivefps_button">350 to 400</string>
    <string name="sixfps_button">400 to 450</string>
    <string name="sevenfps_button">450 to 500</string>
    <string name="eightfps_button">Greater than 500</string>
    <string name="searcharmory_button">Search</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="submit_button">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_search">Press a button to search</string>
    <string name="title_activity_brand">Select a Brand</string>
    <string name="title_activity_my_armory">My Armory</string>
    <string name="title_activity_type">Select a Gun Type</string>
    <string name="title_activity_propulsion">Select a Propulsion Type</string>
    <string name="title_activity_fps">Select an FPS Range</string>
    <string name="title_activity_custom">Custom Search</string>
    <string name="title_activity_kwa">KWA</string>
    <string name="title_activity_aandk">A and K</string>
    <string name="title_activity_aps">APS</string>
    <string name="title_activity_ares">ARES</string>
    <string name="title_activity_cyma">CYMA</string>
    <string name="title_activity_classicarmy">Classic Army</string>
    <string name="title_activity_dboys">D-Boys</string>
    <string name="title_activity_echo1">Echo 1</string>
    <string name="title_activity_gandg">G and G</string>
    <string name="title_activity_gandp">G and P</string>
    <string name="title_activity_ics">ICS</string>
    <string name="title_activity_javelin">Javelin</string>
    <string name="title_activity_jg">JG</string>
    <string name="title_activity_kingarms">King Arms</string>
    <string name="title_activity_lct">LCT</string>
    <string name="title_activity_lancertactical">Lancer Tactical</string>
    <string name="title_activity_src">SRC</string>
    <string name="title_activity_socomgear">Socom Gear</string>
    <string name="title_activity_tsd">TSD</string>
    <string name="title_activity_tokyomarui">Tokyo Marui</string>
    <string name="title_activity_vfcgb">VFC/GB</string>
    <string name="title_activity_we">WE</string>
    <string name="title_activity_rifle">Rifle</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_sniper">Sniper</string>
    <string name="title_activity_smg">SMG</string>
    <string name="title_activity_pistol">Pistol</string>
    <string name="title_activity_special">Special</string>
    <string name="title_activity_brand_query">Results</string>
    <string name="title_activity_gun_info">Gun Information</string>
    <string name="title_activity_sub_type">Select a Sub Type</string>
    <string name="title_activity_my_armory_add">Add to Armory</string>
    <string name="brand_prompt">Choose a manufacturer</string>
    <string name="model_prompt">Enter the model type</string>
    <string name="fps_prompt">Choose an FPS range</string>
    <string name="rof_prompt">Choose an ROF range</string>
    <string name="type_prompt">Choose a gun type</string>
    <string name="blowback_prompt">Choose a propulsion type</string>
    <string name="propulsion_prompt">Choose blowback. Yes or No</string>
    <string name="weight_prompt">Enter the weight</string>
    <string name="barrellength_prompt">Choose an inner barrel length</string>
    <string name="barreldiameter_prompt">Choose an inner barrel diameter</string>
    <string name="upgrades_prompt">Enter any upgrades</string>
    <string name="attachments_prompt">Enter any attachments</string>
    <string name="additionalinfo_prompt">Enter any additional info</string>

    <string-array name="brand_array">
        <item>Select a manufacturer</item>
        <item>A and K</item>
        <item>APS</item>
        <item>ARES</item>
        <item>CYMA</item>
        <item>Classic Army</item>
        <item>Echo 1</item>
        <item>G and G</item>
        <item>G and P</item>
        <item>ICS</item>
        <item>JAVELIN</item>
        <item>JG</item>
        <item>KWA</item>
        <item>King Arms</item>
        <item>LCT</item>
        <item>Lancer Tactical</item>
        <item>SRC</item>
        <item>Socom Gear</item>
        <item>TSD</item>
        <item>Tokyo Marui</item>
        <item>VFC/GB</item>
        <item>WE</item>
        <item>NA</item>
    </string-array>
    <string-array name="fps_array">
        <item>Select an FPS range</item>
        <item>Less than 200</item>
        <item>200 to 249</item>
        <item>250 to 299</item>
        <item>300 to 349</item>
        <item>350 to 399</item>
        <item>400 to 449</item>
        <item>450 to 499</item>
        <item>Greater than 500</item>
        <item>NA</item>
    </string-array>
    <string-array name="rof_array">
        <item>Select an ROF range</item>
        <item>Less than 10</item>
        <item>10 to 14</item>
        <item>15 to 19</item>
        <item>20 to 24</item>
        <item>25 to 29</item>
        <item>30 to 34</item>
        <item>35 to 39</item>
        <item>Greater than 40</item>
        <item>NA</item>
    </string-array>
    <string-array name="type_array">
        <item>Select a gun type</item>
        <item>Pistol</item>
        <item>SMG</item>
        <item>Shotgun</item>
        <item>Sniper</item>
        <item>Rifle</item>
        <item>Support</item>
        <item>NA</item>
    </string-array>
    <string-array name="propulsion_array">
        <item>Select a propulsion type</item>
        <item>Gas</item>
        <item>Electric</item>
        <item>Spring</item>
        <item>NA</item>
    </string-array>
    <string-array name="blowback_array">
        <item>Blowback?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="barrellength_array">
        <item>Select an inner barrel length</item>
        <item>82mm</item>
        <item>92mm</item>
        <item>95mm</item>
        <item>97mm</item>
        <item>112mm</item>
        <item>229mm</item>
        <item>247mm</item>
        <item>300mm</item>
        <item>363mm</item>
        <item>407mm</item>
        <item>455mm</item>
        <item>499mm</item>
        <item>509mm</item>
        <item>650mm</item>
        <item>NA</item>
    </string-array>
    <string-array name="barreldiameter_array">
        <item>Select an inner barrel diameter</item>
        <item>6.00mm</item>
        <item>6.01mm</item>
        <item>6.02mm</item>
        <item>6.03mm</item>
        <item>6.04mm</item>
        <item>6.05mm</item>
        <item>6.23mm</item>
        <item>NA</item>
    </string-array>

    <string name="title_activity_my_armory_remove">Remove from My Armory</string>

</resources>