<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" 
    	android:paddingLeft="16dp"
    	android:paddingRight="16dp"
    	android:paddingTop="25dp"
    	android:paddingBottom="35dp"
    	android:background="@drawable/background">
    	
	    <Button
        	android:id="@+id/rifle_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:text="@string/rifle_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType" 
        	android:background="@drawable/buttons"/>
        
    	<Button
        	android:id="@+id/support_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/support_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType"
			android:background="@drawable/buttons"/>
    
    	<Button
        	android:id="@+id/sniper_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/sniper_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType"
			android:background="@drawable/buttons"/>
    	
    	<Button
        	android:id="@+id/smg_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/smg_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType"
			android:background="@drawable/buttons"/>
    	
    	<Button
        	android:id="@+id/pistol_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/pistol_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType"
			android:background="@drawable/buttons"/>
    	
    	<Button
        	android:id="@+id/special_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/special_button" 
        	android:textColor="@drawable/button_text_color"
        	android:onClick="goToSubType"
			android:background="@drawable/buttons"/>

    </LinearLayout>
	
</ScrollView>