<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" 
    	android:paddingLeft="16dp"
    	android:paddingRight="16dp"
    	android:paddingTop="25dp"
    	android:paddingBottom="35dp"
    	android:background="@drawable/background">
    	
	    <Button
        	android:id="@+id/gas_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:text="@string/gas_button" 
        	android:onClick="goToBrandQuery" 
        	android:background="@drawable/buttons"/>
        
    	<Button
        	android:id="@+id/electric_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/electric_button" 
        	android:onClick="goToBrandQuery"
			android:background="@drawable/buttons"/>
    
    	<Button
        	android:id="@+id/spring_button"
        	android:layout_height="50dp"
        	android:layout_width="match_parent"
        	android:layout_marginTop="35dp"
        	android:text="@string/spring_button" 
        	android:onClick="goToBrandQuery"
			android:background="@drawable/buttons"/>
    	
    </LinearLayout>
	
</ScrollView>